--- a/dc/dc-derivation.tex
+++ b/dc/dc-derivation.tex
@@ -1,6 +1,6 @@
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=1\textwidth]{images/dc/dc-derivation.png}
+    \includegraphics[width=1\textwidth]{figures/dc/dc-derivation.png}
     \caption{Derivation of the direct current resistivity equations.}
     \label{fig:dc-derivation}
 \end{figure}
