--- a/finitevolume/classes.tex
+++ b/finitevolume/classes.tex
@@ -1,6 +1,8 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1\textwidth]{figures/finitevolume/classes.pdf}
-    \caption{classes}
+    \caption{
+        The computational ontology developed for the \texttt{discretize} package showing inheritance and commonalities between the four mesh types.
+    }
     \label{fig:finitevolume-classes}
 \end{figure}
