--- a/finitevolume/quadtree-divergence.tex
+++ b/finitevolume/quadtree-divergence.tex
@@ -1,6 +1,6 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1\textwidth]{figures/finitevolume/quadtree-divergence.png}
-    \caption{DIV}
+    \caption{Simple quadtree mesh showing (a) the mesh structure, cell numbering, and face numbering in both the $x$ and $y$ directions; and (b) the structure of the face divergence matrix that has eliminated the hanging faces.}
     \label{fig:finitevolume-quadtree-divergence}
 \end{figure}
