--- a/richards/1d/data.tex
+++ b/richards/1d/data.tex
@@ -3,7 +3,7 @@
 \includegraphics[width=1.0\textwidth]{figures/richards/1d/data.png}
 \end{center}
 \caption{
-    data
+    Observed and predicted water content data from the one dimensional infiltration experiment showing water content over time.
 }
 \label{fig:richards-1d-data}
 \end{figure}
