--- a/richards/1d/recovered_curves.tex
+++ b/richards/1d/recovered_curves.tex
@@ -3,7 +3,7 @@
 \includegraphics[width=1.0\textwidth]{figures/richards/1d/recovered_curves.png}
 \end{center}
 \caption{
-a
+Showing the water retention and hydraulic conductivity curves for the true and predicted models for the three soil layers. The histogram in each plow shows the distribution of true pressure head values in each layer.
 }
 \label{fig:richards-1d-recovered_curves}
 \end{figure}
