--- a/richards/1d/recovered_parameters.tex
+++ b/richards/1d/recovered_parameters.tex
@@ -3,7 +3,7 @@
 \includegraphics[width=1.0\textwidth]{figures/richards/1d/recovered_parameters.png}
 \end{center}
 \caption{
-a
+The true and recovered soil parameters as a function of depth, showing (a) hydraulic conductivity; (b) residual and saturated water content; (c) the empirical parameter $n$; and (d) the empirical parameter $\alpha$. Each plot also shows the full inversion history of the predicted model as a transparent black line.
 }
 \label{fig:richards-1d-recovered_parameters}
 \end{figure}
