--- a/simpeg/conceptual_framework.tex
+++ b/simpeg/conceptual_framework.tex
@@ -3,7 +3,7 @@
 \includegraphics[width=0.9\textwidth]{figures/simpeg/conceptual_framework.png}
 \end{center}
 \caption{
-framework
+Conceptual visualization of the interplay between and within disciplines of hydrogeology, geophysics and geology; showing (a) the barriers between geophysical inversions and the perennial difficulties with interfacing to geologic and hydrologic knowledge and simulations; (b) the recent combining of multi-physics inversions through a largely external, \emph{ad hoc} implementation; and (c) a framework that combines geophysical simulations and inversions in a consistent, reproducible manner. The structure of the simulation and inversion framework is a research topic of this thesis.
 }
 \label{fig:simpeg-conceptual_framework}
 \end{figure}
