--- a/simpeg/conceptual_outline.tex
+++ b/simpeg/conceptual_outline.tex
@@ -3,7 +3,7 @@
 \includegraphics[width=1.0\textwidth]{figures/simpeg/conceptual_outline.png}
 \end{center}
 \caption{
-outline
+Outline of the thesis chapters: (2) the simulation and inversion framework; (3) the sensitivity calculation in Richards equation; (4) applications and exploration into vadose zone inversions; (A1) finite volume techniques on a variety of meshes; and (A2) interfaces to geologic knowledge through parameterizations and a forward simulation framework and extensions to the work presented.
 }
 \label{fig:simpeg-conceptual_outline}
 \end{figure}
