Simpeg figures and updates to figure positions.

--- a/richards/1d/fields.tex
+++ b/richards/1d/fields.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]
+\begin{figure}[!htbp]
 \begin{center}
 \includegraphics[width=1.0\textwidth]{figures/richards/1d/fields.png}
 \end{center}
