--- a/richards/finite-volume.tex
+++ b/richards/finite-volume.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]
+\begin{figure}[!htbp]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{figures/richards/finite-volume.png}
 \end{center}
