--- a/richards/inversion3d-results.tex
+++ b/richards/inversion3d-results.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]
+\begin{figure}[!htbp]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{figures/richards/inversion3d-results.png}
 \end{center}
