--- a/richards/k_fun.tex
+++ b/richards/k_fun.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]
+\begin{figure}[!htbp]
 \begin{center}
 \includegraphics[width=1.0\textwidth]{figures/richards/k_fun.png}
 \end{center}
