--- a/richards/objfun_saturation.tex
+++ b/richards/objfun_saturation.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]
+\begin{figure}[!htbp]
 \begin{center}
 \includegraphics[width=1.0\textwidth]{figures/richards/objfun_saturation.png}
 \end{center}
