updates to figure caption

--- a/simpeg/conceptual_vadose.tex
+++ b/simpeg/conceptual_vadose.tex
@@ -3,7 +3,7 @@
 \includegraphics[width=1.0\textwidth]{figures/simpeg/conceptual_vadose.png}
 \end{center}
 \caption{
-Conceptual visualization of the discipline of hydrogeophysics that uses geophysical methods in either a coupled or uncoupled way to hydrologic simulations and inversions; showing (a) the scalability of vadose zone inversions when inverting for large scale, three dimensional parameter distributions is not currently scalable; and (b) once these inversions are possible, there are questions with regard to model conceptualization in vadose zone inversions and interfacing to geologic knowledge.
+Conceptual visualization of the discipline of hydrogeophysics that uses geophysical methods in either a coupled or uncoupled way to hydrologic simulations and inversions; showing (a) the lack of computational scalability of vadose zone inversions when inverting for large scale, three dimensional parameter distributions; and (b) once these inversions are possible, there are questions with regard to model conceptualization in vadose zone inversions and interfacing to geologic knowledge.
 }
 \label{fig:simpeg-conceptual_vadose}
 \end{figure}
