--- a/richards/finite-volume.tex
+++ b/richards/finite-volume.tex
@@ -3,6 +3,6 @@
 \includegraphics[width=0.9\textwidth]{figures/richards/finite-volume.png}
 \end{center}
 \caption{Discretization of unknowns in 1D, 2D and 3D space. Red circles are the locations of the discrete hydraulic conductivity $K$ and the pressure head $\psi$.
-The arrows are the locations of the discretized flux $\vec f$ on each cell face.}
+The arrows are the locations of the discretized flux $\vec f$ on each cell face. Modified after \cite{fvtutorial}.}
 \label{fig:richards-finite-volume}
 \end{figure}
