--- a/richards/3d_model.tex
+++ b/richards/3d_model.tex
@@ -3,7 +3,7 @@
 \includegraphics[width=0.8\textwidth]{figures/richards/3d_model.png}
 \end{center}
 \caption{
-Soil structure in three dimensions showing the boundary between two soil types of sand and loamy sand.
+Soil structure in three dimensions showing four sections and the boundary between two soil types of sand (yellow) and loamy sand (purple). The two cross sections and the shallower depth section are shown in subsequent figures.
 }
 \label{fig:richards-3d_model}
 \end{figure}
